# NeToDo

./: .clang-format  CMakeLists.txt
.github/workflows/: gtest.yml
app/: CMakeLists.txt  test_start.cpp
netodo/: CMakeLists.txt
netodo/include/netodo/db_manager/: DBManager.hpp  TaskDBManager.hpp  ToDoDBManager.hpp
netodo/include/netodo/notes/: Note.hpp  Task.hpp  ToDo.hpp
netodo/src/db_manager/: DBManager.cpp  TaskDBManager.cpp  ToDoDBManager.cpp
netodo/src/notes/: Note.cpp  Task.cpp  ToDo.cpp
test/: CMakeLists.txt  db_test.cpp  note_test.cpp
